Bug 333802 - Dragon Player doesn't display the subtiltes anymore.
Summary: Dragon Player doesn't display the subtiltes anymore.
Status: RESOLVED FIXED
Alias: None
Product: phonon-backend-gstreamer
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.7.2
Platform: Kubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Daniel Vrátil
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-24 03:02 UTC by Martin
Modified: 2014-08-11 16:49 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin 2014-04-24 03:02:59 UTC
Since I updated Kubuntu 13.10 to 14.04 Dragon Player doesn't display the subtitles from a ".srt" archive with the same name. It happen on two different machines I have.

Reproducible: Always

Steps to Reproduce:
1.Get your favorite movie
2.Download the subtitle and rename it as the movie
3.Play movie with Dragon Player
Actual Results:  
Subtitle doesn't display.

Expected Results:  
Display subtitles.
Comment 1 Daniel Vrátil 2014-08-10 20:45:52 UTC
In Dragon Player you might need to enable the subtitles manually.

Anyway, reassigning to Dragon Player, as this is almost definitely not a phonon-gstreamer problem.
Comment 2 Harald Sitter 2014-08-10 21:05:08 UTC
auto detection is happening in gstreamer/mediaobject.cpp so bouncing back to pgst. (mind you, manual setting actually is not implemented in dragon, but that's a different issue altogether)

void MediaObject::autoDetectSubtitle()
{
    if (m_source.type() == MediaSource::LocalFile ||
       (m_source.type() == MediaSource::Url && m_source.mrl().scheme() == "file") ) {
 
        QList<QLatin1String> exts = QList<QLatin1String>()
            << QLatin1String("sub") << QLatin1String("srt")
            << QLatin1String("smi") << QLatin1String("ssa")
            << QLatin1String("ass") << QLatin1String("asc");
 
        // Remove the file extension
        QString absCompleteBaseName = m_source.fileName();
        absCompleteBaseName.replace(QFileInfo(absCompleteBaseName).suffix(), QChar());
 
        // Looking for a subtitle in the same directory and matching the same name
        foreach(const QLatin1String &ext, exts) {
            if (QFile::exists(absCompleteBaseName + ext)) {
                changeSubUri(Mrl("file://" + absCompleteBaseName + ext));
                break;
            }
        }
    }
}
Comment 3 Daniel Vrátil 2014-08-11 16:49:12 UTC
Git commit f5fa90dde334b988d75a70c5703a739641a311fc by Dan Vrátil.
Committed on 11/08/2014 at 16:48.
Pushed by dvratil into branch '4.7'.

Fix subtitles autodetection
FIXED-IN: 4.7.4

M  +6    -6    gstreamer/mediaobject.cpp

http://commits.kde.org/phonon-gstreamer/f5fa90dde334b988d75a70c5703a739641a311fc