Fix subtitles autodetection

BUG: 333802
FIXED-IN: 4.7.4